# FEUP-CAL-PROJ

./: .gitignore  .gitignore.txt  Address.cpp  Address.h  Algorithms.h  Application.cpp  Application.h  Bin.cpp  Bin.h  CMakeLists.txt  Central.cpp  Central.h  Client.cpp  Client.h  Garbage.cpp  Garbage.h  Graph.h  House.cpp  House.h  Location.cpp  Location.h  Menu.cpp  Menu.h  MutablePriorityQueue.h  Path.cpp  Path.h  Read.h  SingleBin.cpp  SingleBin.h  Truck.cpp  Truck.h  User.cpp  User.h  Viewer.cpp  Viewer.h  exceptions.h  files.cpp  files.h  interface.cpp  interface.h  (+3 more)
resources/data/: Garbage.txt  User.txt
